import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
import java.io.ByteArrayOutputStream
import java.util.Properties

plugins {
    id("java")
    id("com.gradleup.shadow") version "8.3.0"
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

group = "io.github.divinerealms.aetherball"

val versionFile = file("version.properties")
val props = Properties().apply {
    if (versionFile.exists()) {
        load(versionFile.inputStream())
    } else {
        setProperty("major", "1")
        setProperty("minor", "0")
        setProperty("patch", "0")
    }
}

val major = props.getProperty("major").toInt()
val minor = props.getProperty("minor").toInt()
val patch = props.getProperty("patch").toInt()
val versionBase = "$major.$minor.$patch"

fun gitCommitHash(): String? = try {
    val stdout = ByteArrayOutputStream()
    exec {
        commandLine("git", "rev-parse", "--short", "HEAD")
        standardOutput = stdout
    }
    stdout.toString().trim()
} catch (_: Exception) {
    null
}

fun hasUncommittedChanges(): Boolean = try {
    val stdout = ByteArrayOutputStream()
    exec {
        commandLine("git", "status", "--porcelain")
        standardOutput = stdout
    }
    stdout.toString().isNotBlank()
} catch (_: Exception) {
    false
}

val commit = gitCommitHash() ?: "unknown"
val dirty = hasUncommittedChanges()

version = if (dirty) "$versionBase-$commit-DEV"
else "$versionBase-$commit"

val jarLabel = if (dirty) "AetherBall-$versionBase-$commit-DEV.jar"
else "AetherBall-$versionBase-$commit.jar"

repositories {
    mavenCentral()
    maven("https://hub.spigotmc.org/nexus/content/repositories/snapshots/")
    maven("https://oss.sonatype.org/content/repositories/snapshots")
    maven("https://oss.sonatype.org/content/repositories/central")
    maven("https://repo.codemc.io/repository/nms")
    maven("https://jitpack.io")
    maven("https://repo.extendedclip.com/content/repositories/placeholderapi/")
    maven("https://repo.aikar.co/content/groups/aikar/")
}

dependencies {
    compileOnly("org.spigotmc:spigot:1.8.8-R0.1-SNAPSHOT")
    compileOnly("com.github.MilkBowl:VaultAPI:1.7")
    compileOnly("org.projectlombok:lombok:1.18.38")
    compileOnly("me.clip:placeholderapi:2.11.6")
    compileOnly("net.luckperms:api:5.4")
    compileOnly("com.github.NEZNAMY:TAB-API:5.3.2")

    implementation("co.aikar:acf-paper:0.5.1-SNAPSHOT")

    annotationProcessor("org.projectlombok:lombok:1.18.38")

    testCompileOnly("org.projectlombok:lombok:1.18.38")
    testAnnotationProcessor("org.projectlombok:lombok:1.18.38")
    testImplementation(platform("org.junit:junit-bom:5.10.0"))
    testImplementation("org.junit.jupiter:junit-jupiter")
}

tasks.compileJava {
    options.compilerArgs.add("-parameters")
}

tasks.processResources {
    filesMatching("plugin.yml") {
        expand("version" to project.version.toString())
    }
}

tasks.withType<ShadowJar> {
    archiveFileName.set(jarLabel)
    relocate("co.aikar.commands", "io.github.divinerealms.aetherball.libs.acf")
    relocate("co.aikar.locales", "io.github.divinerealms.aetherball.libs.locales")
    minimize()
}

tasks.build {
    dependsOn(tasks.shadowJar)
    doFirst {
        println("Building AetherBall version: $version")
        println("Repository state: ${if (dirty) "UNCOMMITTED CHANGES" else "CLEAN"}")
        println("Output JAR: $jarLabel")
    }
}

tasks.test {
    useJUnitPlatform()
}
